# scclib-zlib

./: BUILD.bazel  Makefile  README.md  WORKSPACE.bazel  ipp.BUILD.bazel  make.mk
include/: zlib.h
unittest/: BUILD.bazel  Makefile  README.md  main.cc  pg1524.txt.zlib  zlib.cc
unittest/example/: Makefile
unittest/minigzip/: Makefile
zlib-1.2.11-ipp/: adler32.c  crc32.c  deflate.c  deflate.h  inflate.c  inftrees.h  trees.c
